Add ogp information

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta property="og:url" content="https://le-cafe-d-hiro.netlify.app/#/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Le café d'Hiro">
+    <meta property="og:description" content="Web画面作成練習用のサンプルカフェサイト">
+    <meta property="og:" content="https://photos.app.goo.gl/JqijKbYD1YoKYPcb9">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="./css/destyle.css">
     <link href="https://fonts.googleapis.com/css?family=Life+Savers:400,700|Open+Sans" rel="stylesheet">
