--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta property="og:url" content="https://le-cafe-d-hiro.netlify.app/#/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Le café d'Hiro">
+    <meta property="og:title" content="Le café d'Hiro - Web画面作成練習用のサンプルカフェサイト">
     <meta property="og:description" content="Web画面作成練習用のサンプルカフェサイト">
-    <meta property="og:" content="https://photos.app.goo.gl/JqijKbYD1YoKYPcb9">
+    <meta property="og:image" content="https://photos.app.goo.gl/JqijKbYD1YoKYPcb9">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="./css/destyle.css">
     <link href="https://fonts.googleapis.com/css?family=Life+Savers:400,700|Open+Sans" rel="stylesheet">
