--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta property="og:title" content="Le café d'Hiro - Web画面作成練習用のサンプルカフェサイト">
     <meta property="og:description" content="Web画面作成練習用のサンプルカフェサイト">
     <meta property="og:image" content="https://photos.app.goo.gl/JqijKbYD1YoKYPcb9">
+    <meta property="fb:app_id" content="202397034406075">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="./css/destyle.css">
     <link href="https://fonts.googleapis.com/css?family=Life+Savers:400,700|Open+Sans" rel="stylesheet">
