--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Le café d'Hiro - Web画面作成練習用のサンプルカフェサイト">
     <meta property="og:description" content="Web画面作成練習用のサンプルカフェサイト">
-    <meta property="og:image" content="https://photos.app.goo.gl/JqijKbYD1YoKYPcb9">
+    <meta property="og:image" content="https://photos.google.com/share/AF1QipP9mnLGrkvyJMGN6QMsYalbXZpshGJmmHPEx8GBkGvBnDfmw1UpzVKm9EVBNdawFQ/photo/AF1QipP6KtgYEXG4oA80QaX3xKCDBLaqDVO3mkmcKHfN?key=WExGc0FHLUdtYWdjLVpIVHlidDNBUE9OMHN3dDBB">
     <meta property="fb:app_id" content="202397034406075">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="./css/destyle.css">
